--- a/nlp.html
+++ b/nlp.html
@@ -102,15 +102,15 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458836-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458836-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/doZkuXzQYj/NLP-Engineer'>NLP Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/doZkuXzQYj/NLP-Engineer'>NLP Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -150,7 +150,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 7, 2019 ... The Software Engineer will use machine learning to generate simulated content 
 on various websites and social media platforms that will then be used for?...</p>
@@ -255,7 +255,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flexport/jobs/1837492'>Job Application for Machine Learning Scientist - NLP at Flexport</a></h5> 
+<h5><a href='https://boards.greenhouse.io/flexport/jobs/1837492'>Job Application for Machine Learning Scientist - NLP at Flexport</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -267,7 +267,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -275,7 +275,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-09-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/holaemi/7df2345c-b034-4294-bd58-e86a23d7fd8f'>Emi Labs - NLP Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/holaemi/7df2345c-b034-4294-bd58-e86a23d7fd8f'>Emi Labs - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-09-20</p>
 <hr/>
@@ -291,7 +291,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4428011002'>Job Application for Senior NLP Engineer at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4428011002'>Job Application for Senior NLP Engineer at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -336,7 +336,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -373,11 +373,11 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
-<h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-08-31</p>
 <hr/>
@@ -395,7 +395,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999693611842-stage-data-scientist-nlp'>Numberly Stage Data Scientist - NLP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999693611842-stage-data-scientist-nlp'>Numberly Stage Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
@@ -422,7 +422,7 @@ Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://careers-globetech.icims.com/jobs/2542/nlp-engineer-with-norweigan/job'>Careers | NLP Engineer with Norweigan in Barcelona ... - GlobeTech</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2542/nlp-engineer-with-norweigan/job'>Careers | NLP Engineer with Norweigan in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Norweigan 
 in Barcelona. Review all of the job details and apply today!</p>
@@ -431,7 +431,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Aug 12, 2019 ... Apply online for the job of Senior NLP Engineer at Amplexor.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
